--- a/demo/index.html
+++ b/demo/index.html
@@ -66,9 +66,9 @@
 	</div>
 	
 	<script src="js/jquery.js"></script>
-	<script type="text/javascript" src="vendor/swiper/js/swiper.min.js" ></script>
+	<script src="vendor/swiper/js/swiper.min.js" ></script>
 	<script src="vendor/tansit/jquery.transit.min.js"></script>
-	<script type="text/javascript" src="js/combinate.js" ></script>
+	<script src="js/combine.js" ></script>
 	<script>
 		$(function() {
 			var obj = null;
@@ -97,7 +97,7 @@
 //			ret.transit({ y : 60 });
 			
 			//初始化样式及动画
-			$('.box').combinate(
+			$('.box').combine(
 			[
 				{
 					'background' : 'white',
